<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_overview"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/nav_overview" />

    <group android:id="@+id/nav_features">
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_accounts"
            android:title="@string/nav_accounts" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_transactions"
            android:title="@string/nav_transactions" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_reports"
            android:title="@string/nav_reports" />
    </group>

    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/nav_exit" />

</menu>
