<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shaverz.cream.OverviewFragment">
    <item
        android:id="@+id/action_hide"
        android:orderInCategory="1"
        android:title="@string/menu_hide"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reorder"
        android:orderInCategory="2"
        android:title="@string/menu_reorder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_account"
        android:orderInCategory="3"
        android:title="@string/menu_new_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_mode"
        android:orderInCategory="4"
        android:title="@string/menu_switch_list_mode"
        app:showAsAction="never" />
</menu>
