<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.shaverz.cream.AddEditTransactionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/incomeToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/fab_margin"
                android:background="@drawable/expense_income_toggle"
                android:showText="true"
                android:textOff="@string/toggle_expense"
                android:textOn="@string/toggle_income" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/payerPayeeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout" >

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_payer"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/amountTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:columnCount="2"
                android:rowCount="2">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:text="@string/hint_account"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/account_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:background="@drawable/common_border" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/hint_category"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/currency_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:background="@drawable/common_border" />
            </GridLayout>

        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_save"/>

</FrameLayout>
